merubah kolom about-me

--- a/index.html
+++ b/index.html
@@ -55,16 +55,27 @@
               <div class="row justify-content-center fs-5 text-center">
                   <div class="col-md-4 mb-3">
                     <h4>Experience</h4>
-                      3 Tahun sebagai programmer php di bagian frontend dan backend.
+                    Pengalaman saya 3 tahun di bidang IT perusahaan dan freelance. 
+                    Saya sudah banyak mendevelop beberapa aplikasi untuk perusahaan maupun client. 
+                    Sistem yang saya bangun menggunakan teknologi berbasis web programming. 
+                    Saya pun pernah bekerja freelance sebagai fullstack developer. 
+                    Dan berpengalaman dalam mendesign database dan mengimplementasikan nya pada aplikasi DBMS maupun RDBMS.
+                    Dan cukup familiar dengan sistem ERP menggunaka odooERP.
+                      <!-- 3 Tahun sebagai programmer php di bagian frontend dan backend.
                       dapat memahami algoritma dengan baik. Menguasai beberapa framework backend dan frontend.
                       Terbiasa bekerja dengan GIT. Mampu bekerja sebagai Fullstack. Terbiasa memakai DBMS dan RDBMS seperti 
-                      PostgreSQL dan MariaDB
+                      PostgreSQL dan MariaDB. Pernah memakai sistem Odoo ERP ( Enterpreneur Resource Planning ). -->
                   </div>
                   <div class="col-md-4">
                     <h4>Skills</h4>
-                      Menguasai kerangka framework berbasis frontend, yaitu Jquery dan React. Dan
+                    Menguasai FrontEnd dan BackEnd Framework yaitu untuk front end adalah JQuery dan ReactJS dan 
+                    untuk BackEnd adalah Laravel dan Codeigniter. Dan juga mampu Membuat Aplikasi dengan metode Native (Tanpa Framework). 
+                    mampu mengoprasikan aplikasi berbasis ERP (Enterpreneur Resource Planning). 
+                    berpengalaman dalam mendesign dan mengimplementasikan konsep 
+                    database ke dalam beberapa aplikasi DBMS dan RDBMS seperti MariaDB dan PostgreSql.
+                      <!-- Menguasai kerangka framework berbasis frontend, yaitu Jquery dan React. Dan
                       juga framework backend Laravel dan CodeIgniter. Menguasai RDBMS ( Relational Database Management System ) 
-                      dan DBMS ( Database Management System ) serta berpengalaman memelihara database.
+                      dan DBMS ( Database Management System ) serta berpengalaman memelihara database. -->
                   </div>
               </div>
           </div>
